# polling_places

./: .gitignore  .pre-commit-config.yaml  Division_of_Bennelong_expected_polling_day_locations.html  Division_of_Bennelong_expected_polling_day_locations_primary_vote_last_election.html  Division_of_Bennelong_pre_polling_primary_vote_last_election.html  Division_of_Moreton_expected_polling_day_locations.html  Division_of_Moreton_expected_polling_day_locations_primary_vote_last_election.html  Division_of_Moreton_pre_polling_primary_vote_last_election.html  Division_of_Ryan_expected_polling_day_locations.html  Division_of_Ryan_expected_polling_day_locations_primary_vote_last_election.html  Division_of_Ryan_pre_polling_primary_vote_last_election.html  Division_of_Sydney_expected_polling_day_locations.html  Division_of_Sydney_expected_polling_day_locations_primary_vote_last_election.html  Division_of_Sydney_pre_polling_primary_vote_last_election.html  Division_of_Wentworth_expected_polling_day_locations.html  Division_of_Wentworth_expected_polling_day_locations_primary_vote_last_election.html  Division_of_Wentworth_pre_polling_primary_vote_last_election.html  Makefile  Untitled-1.ipynb  absentee_prepoll_sydney.xlsx  map.html  pyproject.toml  requirements.in  requirements.txt
data/: prdelms.gaz.statics.250301.09.00.02.csv  prdelms.gaz.statics.250405.09.00.02.csv  prdelms.gaz.statics.250407.09.00.02.csv
src/polling_places/: plot.py  polling_places.ipynb  polling_places.py  prepolling_analysis.py
